# consensus

./: .appveyor.yml  .gitignore  .release_ignore  .travis-BITPRIM.yml  .travis.yml  CMakeLists.txt  README.md  bitprim-consensusConfig.cmake.in  build.py  clone-copy.py  conanfile.py  kth-consensusConfig.cmake.in  libbitcoin-consensusConfig.cmake.in
.github/workflows/: knuth.yml
.travis/: install.sh  push_other_repo.sh
_test_package/: conanfile.py
bindings/: consensus.swg
bindings/java/proxy/org/libbitcoin/consensus/: consensusConstants.java  consensusJNI.java
bindings/java/wrap/: consensus.cpp
bindings/python/proxy/: consensus.py
bindings/python/wrap/: consensus.cpp
cmake/: BitprimTools.cmake
helpers/: build.py  clone-copy.py
include/bitcoin/: consensus.hpp
include/bitcoin/consensus/: export.hpp  settings.hpp  version.hpp
include/kth/: consensus.hpp
include/kth/consensus/: conversions.hpp  define.hpp  export.hpp  version.hpp
replier/include/bitcoin/consensus/: configuration.hpp  parser.hpp
replier/src/: configuration.cpp  main.cpp  parser.cpp
requester/src/: consensus.cpp
requester/src/consensus/: consensus.cpp
src/bch-rules/: amount.h  coins.cpp  coins.h  compat.h  hash.h  prevector.h  pubkey.cpp  random.cpp  serialize.h  tinyformat.h  uint256.h
src/bch-rules/compat/: byteswap.h  endian.h
src/bch-rules/crypto/: common.h  hmac_sha512.cpp  hmac_sha512.h  ripemd160.cpp  ripemd160.h  sha1.cpp  sha1.h  sha256.cpp  sha256.h  sha512.h
src/bch-rules/primitives/: transaction.cpp  transaction.h
src/bch-rules/script/: bitfield.cpp  interpreter.cpp  script.cpp  script.h  script_execution_context.cpp  script_execution_context.h  sigencoding.cpp
src/bch-rules/util/: bitmanip.h  strencodings.cpp  strencodings.h
src/btc-rules/: hash.h  serialize.h  uint256.cpp  uint256.h
src/btc-rules/crypto/: hmac_sha512.h
src/btc-rules/primitives/: transaction.cpp
src/btc-rules/script/: script.h
src/btc-rules/util/: strencodings.cpp  strencodings.h
src/clone-OLD-mix/script/: interpreter.cpp  interpreter.h
src/clone-abc/: amount.h  compat.h  hash.cpp  hash.h  pubkey.cpp  pubkey.h  serialize.h  uint256.cpp  uint256.h  utilstrencodings.cpp  utilstrencodings.h  version.h
src/clone-abc/compat/: byteswap.h
src/clone-abc/crypto/: common.h  hmac_sha512.cpp  hmac_sha512.h  ripemd160.cpp  ripemd160.h  sha1.cpp  sha1.h  sha256.cpp  sha256.h  sha512.cpp  sha512.h
src/clone-abc/primitives/: transaction.cpp  transaction.h
src/clone-abc/script/: interpreter.cpp  script.h
src/clone-abc/util/: bitmanip.h  strencodings.h
src/clone-core/: serialize.h  uint256.cpp  uint256.h  utilstrencodings.cpp
src/clone-core/primitives/: transaction.cpp  transaction.h
src/clone-core/script/: interpreter.cpp  script.h
src/clone-legacy/: hash.cpp  hash.h  uint256.h  version.h
src/clone-legacy/primitives/: transaction.h
src/clone-legacy/script/: interpreter.cpp
src/clone/script/: interpreter.cpp
src/consensus/: consensus.cpp  consensus.hpp  conversions.cpp  settings.cpp
test/: consensus__script_error_to_verify_result.cpp  consensus__script_verify.cpp  consensus__verify_flags_to_script_flags.cpp  main.cpp  script.hpp  test_helpers.hpp
test_package/: conanfile.py
